--- a/H5_RMaccelerated.tex
+++ b/H5_RMaccelerated.tex
@@ -10,6 +10,20 @@
 
 \section{System implementation}
 
+first started on PC
+
+structs with pointers back
+
+typedeffing stuff so easy to change on board
+
+Migrating to board => changing to sdsalloc + how to change starting function (insertion point) => main!!.
+
+file reading => segmentation fault? => wrong path!
+
+refactoring
+
+FASTQ: https://github.com/Illumina/Isaac3/tree/master/src/data/examples/PhiX/Fastq
+
 \section{Possible initial speedups}
 
 \section{Problems with this initial approach}
