--- a/voorwoord.tex
+++ b/voorwoord.tex
@@ -1,1 +1,18 @@
 Het voorwoord vul je persoonlijk in met een appreciatie of dankbetuiging aan de mensen die je hebben bijgestaan tijdens het verwezenlijken van je masterproef en je hebben gesteund tijdens je studie.
+
+Thanks to:
+
+BUT
+ Vaclav Simek: promoter en help bij erasmus exchange
+ Thomas martinek: idea BFAST en ondersteuning HLS
+ Vojtech Mrazek: hardware
+
+KUL
+ Jonas Lannoo: ondersteuning vanuit Belgie tijdens erasmus naar thesis toe
+ Sammy Verslype: originele idee accelerator met FPGA gebaseerd platform
+ 
+AZ sj
+ Friedel Nollet: idee versnellen reference mapping, factchecking biologie gedeelte en aangeven voorbeelddata
+
+
+kort bedankinkje peuteman, bonte en studena voor administratie erasmus
