system implementation added in keywords

--- a/H3_Methods.tex
+++ b/H3_Methods.tex
@@ -323,7 +323,7 @@ The 11 mandatory fields are:
 	
 	\item \textbf{Pnext}: position of the primary alignment of the next read in the template. For this thesis we will fill this field with a '0' character.
 	
-	\item \textbf{Tlen}: the observed template length, from the first till last mapped base. For this thesis we will fill this field with a '*' character.
+	\item \textbf{Tlen}: the observed template length, from the first till last mapped base. For this thesis we will fill this field with a '0' character.
 	
 	\item \textbf{Seq}: the full sequence. This can be found in the FASTQ file on the second line.
 	
