--- a/H6_implementation.tex
+++ b/H6_implementation.tex
@@ -4,10 +4,4 @@
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
-\chapter{Acceleration idea: BFAST algorithm}
-
-\section{BFAST algorithm}
-
-\section{System implementation}
-
-\section{Speedups}
+\chapter{Acccelerating the software implementation using HLS}
