--- a/H8_conclusions.tex
+++ b/H8_conclusions.tex
@@ -5,3 +5,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
 \chapter{Conclusion and future research}
+
+Gap opening and extension
+
+BFAST algorithm
+
+BASE type memory efficient
+
+FTP for easy on and offloading the data
