corrected biology background

--- a/H4_ELbackground.tex
+++ b/H4_ELbackground.tex
@@ -26,5 +26,8 @@ As we saw in the analysis of the Smith-Waterman algorithm in \ref{expl:SWanalyse
 \subsection{Ethernet}
 \subsection{Alternatives and selection}
 
+reading from sd card so not a lot of information exchange needed
+if necessary => FTP
+
 bv. SATA, PCI, ...
 
