--- a/thesis.tex
+++ b/thesis.tex
@@ -111,8 +111,8 @@
 % onder embargo? laat leeg indien van niet; vul de datum in als dd-mm-yyyy indien van wel
 %\embargo{25-10-2015}
 
-\title{Genetic sequence alignment acceleration using a FPGA based platform}
-\subtitle{What methods can be used to accelerate the Smith-Waterman  algorithm for genetic sequence alignment with an FPGA equipped  platform?}
+\title{Building a hardware accelerator for DNA sequence alignment  using an MPSoC}
+\subtitle{acceleration of the Smith-Waterman algorithm for reference genome mapping with a Multi-Processor System on Chip?}
 % \author{naam student}
 \forenameA{Robin}
 \surnameA{Nollet}
