--- a/H3_Methods.tex
+++ b/H3_Methods.tex
@@ -4,13 +4,13 @@
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
-\chapter{Methods for genetic sequence alignment}
+\chapter{Methods for DNA sequence alignment}
 \label{ch:algoverzicht}
 
 
-\section{Genetic sequence aligning}
+\section{DNA sequence aligning}
 
-The human genome (e.g. $HG19$) is used as a reference genome for all sequenced human DNA. However, The genetic code of all humans is slightly different. Genetic sequence alignment is the science where you try to align 2 sequences with each other so that the amount of differences is minimal. In this chapter, the most frequently used algorithms are examined.
+The human genome (e.g. $hg19$) is used as a reference genome for all sequenced human DNA. However, the genetic code of all humans is slightly different. Genetic sequence alignment is the science where you try to align 2 sequences with each other so that the amount of differences is minimal. In this chapter, the most frequently used algorithms are discussed.
 
 \subsection{Alignment in general}
 
@@ -22,7 +22,7 @@ In genetic codes, there are 3 types of differences between the given sequence an
 	\item Substitution: one or more bases have been substituted by other bases.
 \end{itemize}
 
-Inserts and deletions are often described by a single term, \emph{indel}. In literature, this is most often represented with a '$-$' character.\\
+Inserts and deletions are often described by a single term, \emph{indel}.
 
 For example: if we want to align the following sequences:
 \begin{lcverbatim}
@@ -38,11 +38,12 @@ The alignment itself can now be done in different ways. Possible alignments are:
 	Seq1: atATCGgc
 	Seq2: --ATCG--
 \end{lcverbatim}
-Which alignment that is the actual output, depends on the algorithm and the given parameters.\\
+Which alignment that is the actual output, depends on the algorithm and the given parameters. The '-' character represents a base which is not present.
 
 Keep in mind, there is no one "correct" alignment. The core of the alignment algorithms is the same each time, but the parameters of these algorithms are changed depending on the application.
 
-\section{Local VS global alignment}
+\section{Local versus global alignment}
+\label{S:localVSglobalAlignment}
 
 To explain the difference between local and global alignment, we can take a look at the following example:
 
@@ -66,14 +67,14 @@ In practice, the local alignment is used most often, since it can give you infor
 
 \section{Commonly used algorithms}
 
-In this section, we will take a look at some algorithms that are used most often for genetic sequence alignment.
+In this section, we will take a look at some algorithms that are used most often for DNA sequence alignment.
 
 
-The algorithms that are used most often are categorized in 2 ways: 
+The most used algorithms are often categorized in 2 ways: 
 
 \begin{itemize}
-	\item local alignment VS global alignments
-	\item dynamic algorithms VS heuristic algorithms: dynamic algorithms are exact but slow and computationally demanding, whereas heuristic algorithms are faster but are approximations and the best alignment is not guaranteed.
+	\item local alignment versus global alignments (see \ref{S:localVSglobalAlignment})
+	\item dynamic algorithms versus heuristic algorithms: dynamic algorithms are exact but slow and computationally demanding, whereas heuristic algorithms are faster but are approximations and the best alignment is not guaranteed.
 \end{itemize}
 
 Hereunder is a schematic view of some algorithms that are used in practice:
@@ -86,18 +87,18 @@ Hereunder is a schematic view of some algorithms that are used in practice:
 		\multicolumn{1}{|l|}{\textbf{Global alignment}} & \multicolumn{1}{c|}{Needleman-Wunsch}             & \multicolumn{1}{c|}{X}                              &  &  \\ \cline{1-3}
 		&                                                   &                                                     &  & 
 	\end{tabular}
-	\caption{Classification of genetic alignment algorithms}
+	\caption{Classification of DNA alignment algorithms}
 \end{table}
 
 
 Keep in mind, a lot of other claimed "algorithms" (for example BFAST, ...), are accelerated versions of the Smith-Waterman algorithm.
 
 \subsection{Needleman-Wunsch}
-Needleman and Wunch proposed a new algorithm for genetic sequence alignment in 1970, now known as the \emph{Needleman-Wunsch} (N-W) algorithm. Since this algorithm is meant for global alignment. Since global alignment is seldomly used in practice, further analysis of the algorithm will not be done. However, N-W has a lot of similarities with the Smith-Waterman algorithm, discussed in the next section.
+Needleman and Wunch proposed a new algorithm for genetic sequence alignment in 1970, now known as the \emph{Needleman-Wunsch} (N-W) algorithm. Since this algorithm is meant for global alignment, which is seldomly used in practice, further discussion of the algorithm will not be done. However, N-W has a lot of similarities with the Smith-Waterman algorithm, discussed in the next section.
 
 \subsection{Smith-Waterman}
 \label{expl:SWanalyse}
-The \emph{Smith-Waterman} (S-W) algorithm was first proposed by Temple F. Smith and Michael S. Waterman in 1981. It is a variation on (N-W), adapted for local alignment. It is a dynamic programming technique, so the optimal local alignment is guaranteed. \\
+The \emph{Smith-Waterman} (S-W) algorithm was first proposed by Temple F. Smith and Michael S. Waterman in 1981. It is a variation on the N-W algorithm, adapted for local alignment. It is a dynamic programming technique, so an optimal local alignment is guaranteed. \\
 
 The core of the algorithm is a matrix fillup, with data dependencies on the previous cells. Hereunder an analysis of the algorithm:
 
@@ -141,7 +142,7 @@ The core of the algorithm is a matrix fillup, with data dependencies on the prev
 		
 		\begin{itemize}
 			\item \emph{Linear}: The penalty is constant. So, in this case, it doesn't matter e.g. the previous was also a gap.
-			\item \emph{Affine}: An affine gap penalty considers gap opening and extension separately. For the sake of simplicity, this analysis will not cover it. The algorithm can be extended to include this affine gap penalty, but this would make the algorithm more complex and we would limit our ability to develop possible accelerations.
+			\item \emph{Affine}: An affine gap penalty considers gap opening and extension separately. For the sake of simplicity, my further implmentation will not include this refinement of the algorithm. The algorithm can be extended to include this affine gap penalty, but this would make the algorithm more complex and we would limit our ability to develop possible accelerations.
 		\end{itemize}
 		
 		
@@ -261,13 +262,13 @@ GTTGAC
 
 \subsection{Mapping to a reference genome}
 
-From the sequencing machines, we get a big amount of reads in the FASTQ format. We should note that all these reads are worthless without a proper interpretation.
+From the DNA sequencing machines, we get a big amount of reads in the FASTQ format. We should note that all these reads are worthless without a proper interpretation.
 
-In most cases, the first step in the analysis of the reads is knowing from which part of the genome it is from. Typically, the read is compared with the whole genome in a local alignment, for example with the Smith-Waterman algorithm. As an output, we would get the position in the human genome and an alignment with its score (how well the sequence fits in that spot). This practice is commonly referred to as \emph{Mapping to reference genome}.
+In most cases, the first step in the analysis of the reads is knowing from which part of the genome it is derived. Typically, the read is compared with the whole genome in a local alignment, for example with the Smith-Waterman algorithm. As an output, we would get the position in the human genome and an alignment with its score (how well the sequence fits in that spot). This practice is commonly referred to as \emph{Mapping to reference genome}.
 
-Since the reads are 100 to 1000 bases long, and the whole human genome is approximately 3 billion bases, this comparison is computationally a very intensive task. If we analyze the S-W algorithm (as we have done in \ref{expl:SWanalyse}, we can see that the value of each cell in the matrix is only dependent on the left-upmost 3 cells. Therefore, It leads us to believe that this algorithm can be accelerated on other hardware solutions such as an FPGA (which will be discussed in chapter \ref{ch:Platforms}) since S-W is heavily parallelizable.
+Since the reads from DNA sequencing machines are 75 to 300 bases long, and the whole human genome is approximately 3 billion bases, this comparison is computationally a very intensive task. If we analyze the S-W algorithm (as we have done in \ref{expl:SWanalyse}), we can see that the value of each cell in the matrix is only dependent on the left-upmost 3 cells. Therefore, It leads us to believe that this algorithm can be accelerated on other hardware solutions such as an FPGA (which will be discussed in chapter \ref{ch:Platforms}) since S-W is heavily parallelizable.
 
-In most clinical applications where mapping to a reference genome is used, the number of reads to be compared with the genome is in the billions.
+In most clinical applications where mapping to a reference genome is used, the number of reads to be compared with the genome is in the millions.
 
 \begin{figure}[H]
 	\centering
@@ -276,14 +277,14 @@ In most clinical applications where mapping to a reference genome is used, the n
 	\label{fig:mapRefGen}
 \end{figure}
 
-Since the read can be from the complementary DNA molecule in the double helix, the sequences can be in forward $[5' \rightarrow 3']$ direction, or in complementary $[3' \rightarrow 5']$ direction. To transform that read to the used reference genome direction we need to perform the following changes to the read:
+Since the read can be from the complementary DNA molecule in the double helix, the sequences can be in forward $[5' \rightarrow 3']$ direction, or in complementary $[3' \rightarrow 5']$ direction. To transform that read to the used reference genome direction we need to perform the following changes to the read to make its reverse complementary:
 \begin{enumerate}
 	\item The bases should be changed to their corresponding base in the base pair;
 	\item The sequence should be reversed.
 \end{enumerate}
 We have no way of knowing in which direction the read is taken, both the forward and the backward possibility should be compared with the reference and the best-aligned version of these two should be chosen.
 
-Please note, in most normal cases we can assume the distribution of reads is practically uniform. Therefore, each base in the human genome will be covered by a statistically expected amount of reads. This amount is often referred to as the \emph{reading depth}.
+Please note, in most normal cases we can assume the distribution of reads is practically uniform. Therefore, each base in the human genome will be covered by a statistically expected amount of reads. This amount is referred to as the \emph{reading depth}.
 
 
 \subsection{The sam and bam file format}
@@ -337,18 +338,18 @@ The 11 mandatory fields are:
 
 \subsection{Clinical application}
 
-We will discuss two clinical applications of mapping to a reference genome.
+We will discuss as examples two clinical applications of mapping to a reference genome.
 
 \begin{enumerate}
 	\item \textbf{\emph{NIPT} (non-invasive prenatal testing), a test for detecting genetic defects in a foetus.}\newline
-	During or After conception, DNA can be lost or gained in the fertilized egg cell. This can result in a severe syndrome of the child. For example, Down syndrome is caused by a trisomy of chromosome 21. Normally all chromosomes are present twice in each cell, one from the mother and the other from the father. In Down syndrome patients something went wrong during cell division at the very early stage of development, and the fetus has in its cells three times chromosome 21. 
+	During or after conception, DNA can be lost or gained in the fertilized egg cell. This can result in a severe syndrome of the child. For example, Down syndrome is caused by a trisomy of chromosome 21. Normally all chromosomes are present twice in each cell, one from the mother and the other from the father. In Down syndrome patients something went wrong during cell division at the very early stage of development, and the fetus has in its cells three times chromosome 21. 
 	Because chromosome 21 is quite small and does not contain that many genes, the child can survive, though with typical mental and clinical problems.
 	
 	\begin{figure}[H]
 		%src: http://www.anatomybox.com/wp-content/uploads/2011/07/Trisomy-21-male.png
 		\centering
 		\includegraphics[width=0.5\textwidth]{clinicalAppl/trisomy-21.png}
-		\caption{Trisomy 21 karyotype}
+		\caption{Trisomy 21 karyotype. The trisomy of chromosome-21 is indicated by an arrow}
 		\label{fig:tri21}
 	\end{figure}
 	
@@ -357,22 +358,22 @@ We will discuss two clinical applications of mapping to a reference genome.
 	
 	It is known that small amounts of DNA of the fetus are present in the blood of the mother, in the cell-free DNA (\emph{cfDNA}) which we find in the blood plasma (the clear, aqueous part of the blood). The blood plasma is used by our body to transport 'waste', including DNA from cells that were broken down. When fetal cells die, which is a normal process, the building blocks of these cells are transported in the plasma of the blood from the mother, included small DNA fragments from the fetus.
 	
-	\emph{NIPT} (non-invasive prenatal testing) is used to analyze DNA derived from the mother's blood. A large number of short cfDNA's are sequenced at random.  Then, each sequence is mapped the whole human genome to find out where it comes from. Finally, the distribution of these reads is calculated. If we observed that a higher frequency of reads as compared to normal individuals coming from chromosome-21, it is almost certain that the fetus has Down's syndrome.
+	\emph{NIPT} (non-invasive prenatal testing) is used to analyze DNA derived from the mother's blood. A large number of short cfDNA fragments are sequenced at random.  Then, each sequence is mapped to the whole human genome to find out where it comes from. Finally, the distribution of these reads is calculated. If we observed that a higher frequency of reads as compared to normal individuals coming from chromosome-21, it is almost certain that the fetus has Down's syndrome.
 	
 	\begin{figure}[H]
-		%src: https://geneton.sk/wp-content/uploads/2019/05/nipt_test_b-1024x763.png
+		%src: https://mail.google.com/mail/u/0/#search/nipt/FMfcgxwHMsQcgsbNLGvDkDqXLjxnNdWR?projector=1&messagePartId=0.1
 		\centering
-		\includegraphics[width=0.5\textwidth]{clinicalAppl/NIPTkadering.png}
-		\caption{DNA of the fetus in the mothers blood}
+		\includegraphics[width=0.5\textwidth]{clinicalAppl/NIPTkadering.jpg}
+		\caption{A schematic overview of the NIPT test}
 		\label{fig:NIPT}
 	\end{figure}
 	
 	Using the same method, we can also find other defects in the number of chromosomes. For example trisomy 18 (Edwards syndrome), trisomy 13 (Patau syndrome) or even in the sex chromosomes, such as XXY (Klinefelter syndrome) or lack of a second X or a Y chromosome (Turner syndrome).
 	
 	\item \textbf{Shallow whole-genome sequencing of tumor DNA.}\newline
-	It is a known fact that damaged DNA can lead to tumor development. This damage can be single bases changes but can also be loss or gain of larger DNA sequences where important genes are located. When someone is diagnosed with cancer, the knowledge of which DNA regions are lost or gained can be important to decide on treatment. 
+	It is a known fact that damaged DNA can lead to tumor development. This damage can be single bases changes but can also be loss or gain of large DNA sequences where important genes are located. When someone is diagnosed with cancer, the knowledge of which DNA regions are lost or gained can be important to decide on treatment. 
 	
-	A new technique to detect all gains and losses of DNA material in one single experiment is \emph{sWGS} (shallow whole-genome sequencing). The technique is performed as follows: DNA from the tumor is fragmented (it is broken in small pieces, eg. by a fragmentize enzyme or by high-frequency sound). These pieces are sequenced randomly, and with a mapping algorithm to the reference genome, the over- or underrepresentation of reads (as compared with a normal sample) indicates if regions of the DNA have changed, and which regions these are.
+	A relatively new technique to detect all gains and losses of DNA material in one single experiment is \emph{sWGS} (shallow whole-genome sequencing). The technique is performed as follows: DNA from the tumor is fragmented (it is broken in small pieces, eg. by a fragmentase enzyme or by high-frequency sound). These pieces are sequenced randomly, and with a mapping algorithm to the reference genome, the over- or underrepresentation of reads (as compared with a normal sample) indicates if regions of the DNA have changed, and which regions these are.
 \end{enumerate}
 
 
